media-server/overseerr/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: media-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: overseerr.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: http
  tls:
  - hosts:
    - overseerr.wavecat.net
    secretName: overseerr.wavecat.net
